--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "firebase": "^11.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-router": "^7.5.3",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
