--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
     "firebase": "^11.6.1",
+    "framer-motion": "^12.10.1",
+    "lucide-react": "^0.507.0",
     "react": "^19.0.0",
+    "react-clock": "^5.1.0",
     "react-dom": "^19.0.0",
+    "react-external-link": "^2.5.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
