--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
     "firebase": "^11.6.1",
-    "framer-motion": "^12.10.4",
+    "framer-motion": "^12.18.1",
     "lucide-react": "^0.507.0",
     "react": "^19.0.0",
     "react-clock": "^5.1.0",
@@ -22,7 +22,9 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.3",
+    "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.1.5"
   },
